# super-methane-brothers

./: .gitignore  .hgignore  AUTHORS  CMakeLists.txt  GAMECUBE.PORT  HISTORY  INSTALL  Makefile  Makefile.3ds  Makefile.gx  Makefile.oldgc  Makefile.switch  Methane-vc2019.sln  Methane-vc2019.vcxproj  Methane-vc2019.vcxproj.filters  Methane-vc90.sln  Methane-vc90.vcproj  README  README-GAMECUBE  README.md  TODO  VERSION  authors.txt  history  history.txt  i_linux  i_riscos  i_win32  install  install.sh  readme  readme.txt  todo
artwork/: bitbucket_smb.xcf
artwork/menu/: menu_1player.xcf  menu_2players.xcf  menu_exit.xcf  menu_i.xcf  menu_letters.xcf  menu_logo.xcf  menu_music.xcf  menu_no.xcf  menu_pointer.xcf  menu_sound.xcf  menu_start.xcf  menu_widescreen.xcf  menu_yes.xcf
data/sounds/: blow.raw  bowling.raw  candle.raw  car.raw  card.raw  chicken.raw  cookie.raw  finlev1.raw  hurry.raw  mask.raw  pickup1.raw  spiningtop.raw  spit.raw  train.raw  turbo.raw  wpotion.raw
docs/: info.htm  info.html
resources/graphics/3ds/: blocks.t3x  sprites.t3x
resources/sounds/gamecube/: crying.raw  day.raw  die2.raw  duck.raw  feather.raw  marble.raw  moon.raw  oil.raw  pstar.raw  redstar.raw  splat.raw  tap.raw  tribble.raw  twinkle.raw  wings.raw  xylo.raw
resources/sounds/raw/: blow.raw  bowling.raw  candle.raw  car.raw  card.raw  chicken.raw  cookie.raw  crying.raw  day.raw  die2.raw  duck.raw  feather.raw  finlev1.raw  hurry.raw  marble.raw  mask.raw  moon.raw  oil.raw  pickup1.raw  pstar.raw  redstar.raw  spiningtop.raw  spit.raw  splat.raw  tap.raw  train.raw  tribble.raw  turbo.raw  twinkle.raw  wings.raw  wpotion.raw  xylo.raw
source/: baddie.cpp  baddie.h  bitdraw.cpp  bitdraw.h  bitgroup.cpp  bitgroup.h  bititem.cpp  bititem.h  boss.cpp  boss.h  game.cpp  game.h  gasobj.cpp  gasobj.h  gfxdef.h  gfxoff.cpp  global.cpp  global.h  goodie.cpp  goodie.h  mapdata.cpp  mapdef.h  maps.cpp  maps.h  misc.cpp  misc.h  objlist.cpp  objlist.h  objtypes.h  player.cpp  player.h  power.cpp  power.h  snddef.h  sound.cpp  sound.h  suck.cpp  suck.h  target.cpp  target.h  (+2 more)
source/3ds/: assets.h  audiodrv.cpp  audiodrv.h  doc.cpp  doc.h  main.cpp  methane.cpp  precomp.h  target.cpp  target.h
source/3ds/textool/: CMakeLists.txt  main.cpp  names.h  precomp.h
source/clanlib/: doc.cpp  doc.h  methane.cpp  precomp.h  render_batch_triangle.cpp  render_batch_triangle.h  target.cpp  target.h
source/clanlib/ClanMikmod/: module_reader.cpp  module_reader.h  setupmikmod.cpp  setupmikmod.h  soundprovider_mikmod.cpp
source/data/: gfxdata.cpp  gfxdata2.cpp  gfxdata3.cpp  mapdata.cpp  snddata.cpp
source/gamecube/: audiodrv.cpp  audiodrv.h  doc.cpp  doc.h  main.cpp
source/gx/: audiodrv.cpp  audiodrv.h  doc.cpp  doc.h  main.cpp
source/linux/: doc.cpp  doc.h  font32.cpp  font32.h  main.cpp  makefile
source/mikmod/: audiodrv.cpp  audiodrv.h
source/riscos/: !boot  !run  !sprites  doc.cpp  doc.h  extract  makefile  makeold  swicalls.cpp  swicalls.h
source/sdl2/: doc.cpp  doc.h  methane.cpp  precomp.h  target.cpp  target.h
source/switch/: doc.cpp  doc.h  main.cpp
source/win32/mfc/: about.cpp  about.h  doc.cpp  doc.h  frame.cpp  frame.h  help.cpp  help.h  methane.cpp  methane.dsp  methane.dsw  methane.h  methane.rc  methane.sln  methane.vcproj  speed.cpp  speed.h  view.cpp  view.h
sources/: baddie.cpp  bitdraw.cpp  bitgroup.cpp  bitgroup.h  bititem.cpp  bititem.h  boss.cpp  boss.h  doc.cpp  doc.h  game.cpp  gasobj.cpp  gasobj.h  gfxoff.cpp  global.cpp  global.h  goodie.cpp  goodie.h  mapdata.cpp  maps.cpp  methane.cpp  misc.cpp  misc.h  objlist.cpp  player.cpp  player.h  power.h  precomp.h  sound.cpp  sound.h  suck.cpp  suck.h  target.cpp  target.h  weapon.cpp  weapon.h
sources/ClanMikmod/: soundprovider_mikmod.h  soundprovider_mikmod_impl.h  soundprovider_mikmod_session.cpp  soundprovider_mikmod_session.h
